--- a/index.html
+++ b/index.html
@@ -609,10 +609,10 @@ body {
 
 				<div class="advansed">
 					<dl>
-						<dt>Пациент</dt> <dd>Т***ч Т. Т.</dd>
-													<dt>Год рождения</dt> <dd>1991</dd>
+						<dt>Пациент</dt> <dd>С***й П. В.</dd>
+													<dt>Год рождения</dt> <dd>1993</dd>
 																																				<dt>Коронавирус, РНК (SARS-CoV-2, ПЦР) мазок, кач.</dt>
-									<dd>РНК НЕ ОБНАРУЖЕНА (05 апр 2021)</dd>
+									<dd>РНК НЕ ОБНАРУЖЕНА (03 ноя 2021)</dd>
 																										</dl>
 				</div>
 									<div class="advansed">
@@ -620,7 +620,7 @@ body {
 							<dt>Patient</dt> <dd>T***h T.</dd>
 															<dt>Year of birth</dt> <dd>1991</dd>
 																																																				<dt>Coronavirus, RNA (SARS-CoV-2, Real-time PCR) smear, qualitative</dt>
-											<dd>Negative (Apr 05, 2021)</dd>
+											<dd>Negative (Nov 03, 2021)</dd>
 																																								</dl>
 					</div>
 									</div>
