--- a/index.html
+++ b/index.html
@@ -617,8 +617,8 @@ body {
 				</div>
 									<div class="advansed">
 						<dl>
-							<dt>Patient</dt> <dd>T***h T.</dd>
-															<dt>Year of birth</dt> <dd>1991</dd>
+							<dt>Patient</dt> <dd>S***y P.</dd>
+															<dt>Year of birth</dt> <dd>1993</dd>
 																																																				<dt>Coronavirus, RNA (SARS-CoV-2, Real-time PCR) smear, qualitative</dt>
 											<dd>Negative (Nov 03, 2021)</dd>
 																																								</dl>
